syntax = "proto3";

package tracer_study_grpc;
option go_package = "./;pb";

import "google/protobuf/empty.proto";
import "responden.proto";
import "pagination.proto";

message UserStudy {
    uint64 id = 1;
    string nama_responden = 2;
    string email_responden = 3;
    string hp_responden = 4;
    string nama_instansi = 5;
    string jabatan = 6;
    string alamat_instansi = 7;
    string nim_lulusan = 8;
    string nama_lulusan = 9;
    string prodi_lulusan = 10;
    string tahun_lulusan = 11;
    uint32 lama_mengenal_lulusan = 12;
    string etika = 13;
    string keahlian_bid_ilmu = 14;
    string bahasa_inggris = 15;
    string penggunaan_ti = 16;
    string komunikasi = 17;
    string kerjasama_tim = 18;
    string pengembangan_diri = 19;
    string kesiapan_terjun_masy = 20;
    string keunggulan_lulusan = 21;
    string kelemahan_lulusan = 22;
    string saran_peningkatan_kompetensi_lulusan = 23;
    string saran_perbaikan_kurikulum = 24;
    string created_at = 27;
    string updated_at = 28;
    string deleted_at = 29;
}

message SingleUserStudyResponse {
    uint32 code = 1;
    string message = 2;
    UserStudy data = 3;
}

message GetAllUserStudyRequest {
    general.PaginationRequest pagination = 1;
}

message GetAllUserStudyResponse {
    uint32 code = 1;
    string message = 2;
    general.Pagination pagination = 3;
    repeated UserStudy data = 4;
}

message GetUserStudyByNimRequest {
    string nim = 1;
    string email_responden = 2;
    string hp_responden = 3;
}

message ExportUSReportResponse {
    uint32 code = 1;
    string message = 2;
    bytes data = 3;
}

message GetAlumniByAtasanRequest {
    string nama_atasan = 1;
    string hp_atasan = 2;
    string email_atasan = 3;
}

message GetAlumniByAtasanResponse {
    uint32 code = 1;
    string message = 2;
    repeated Responden data = 3;
}

message UserStudyRekap {
    string fakultas = 1;
    string kode_prodi = 2;
    string nama_prodi = 3;
    string jenjang = 4;
    uint32 alumni_count = 5;
    uint32 pkts_count = 6;
    uint32 user_study_count = 7;
    double user_study_percentage = 8;
}

message GetUserStudyRekapRequest {
    general.PaginationRequest pagination = 1;
}

message GetUserStudyRekapResponse {
    uint32 code = 1;
    string message = 2;
    general.Pagination pagination = 3;
    repeated UserStudyRekap data = 4;
}

message UserStudyRekapByProdi {
    string nim = 1;
    string nama = 2;
    string tahun_lulus = 3;
    string pkts_nama_atasan = 4;
    string pkts_email_atasan = 5;
    string pkts_instansi = 6;
    string userstudy_status = 7;
    string userstudy_nama = 8;
    string userstudy_email = 9;
    string userstudy_instansi = 10;
    string userstudy_jabatan = 11;
    string lama_mengenal_lulusan = 12;
    string average_grade = 13;
}

message GetUserStudyRekapByProdiRequest {
    general.PaginationRequest pagination = 1;
    string kode_prodi = 2;
}

message GetUserStudyRekapByProdiResponse {
    uint32 code = 1;
    string message = 2;
    general.Pagination pagination = 3;
    repeated UserStudyRekapByProdi data = 4;
}

service UserStudyService {
    rpc GetAllUserStudy(GetAllUserStudyRequest) returns (GetAllUserStudyResponse) {};
    rpc GetUserStudyByNim(GetUserStudyByNimRequest) returns (SingleUserStudyResponse) {};
    rpc CreateUserStudy(UserStudy) returns (SingleUserStudyResponse) {};
    rpc UpdateUserStudy(UserStudy) returns (SingleUserStudyResponse) {};
    rpc ExportUSReport(google.protobuf.Empty) returns (ExportUSReportResponse) {};
    rpc GetAlumniListByAtasan(GetAlumniByAtasanRequest) returns (GetAlumniByAtasanResponse) {};
    rpc GetUserStudyRekap(GetUserStudyRekapRequest) returns (GetUserStudyRekapResponse) {};
    rpc GetUserStudyRekapByProdi(GetUserStudyRekapByProdiRequest) returns (GetUserStudyRekapByProdiResponse) {};
}